implemented and tested QUERY_FILETRANSFER WRITE_BLOCK